--- a/Classroom.html
+++ b/Classroom.html
@@ -6,28 +6,28 @@
     <meta name="description" content="Ejercicios Laboratorio Unidad 4" />
     <meta name="author" content="Juan Zas" />
     <title>Ejercicio 10</title>
-    <script src="https://kit.fontawesome.com/38818051b5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./estilos.css">
+    <script src="https://kit.fontawesome.com/38818051b5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="main">
         <div class="categorias">
-            <a>Todos los temas</a>
-            <a>Retos</a>
-            <a>Labs.</a>
-            <a>U0. Introduccion</a>
-            <a>U1. Diseño centrado</a>
-            <a>U2. Diseño interfaz</a>
-            <a>U3. HTML</a>
-            <a>U4. CSS</a>
+            <a href="#">Todos los temas</a>
+            <a href="#">Retos</a>
+            <a href="#">Labs.</a>
+            <a href="#">U0. Introduccion</a>
+            <a href="#">U1. Diseño centrado</a>
+            <a href="#">U2. Diseño interfaz</a>
+            <a href="#">U3. HTML</a>
+            <a href="#">U4. CSS</a>
         </div>
         <div class="panel">
             <div class="header">
-                <a>Crear</a>
-                <a>Meet</a>
-                <a>Google Calendar</a>
-                <a>Carpeta de Drive de la clase</a>
+                <a href="#" class="crearBoton">+ Crear</a>
+                <a href="#"><i class="fa-regular fa-comment-dots" style="margin-right: 10px;"></i>Meet</a>
+                <a href="#"><i class="fa-regular fa-calendar" style="margin-right: 10px;"></i>Google Calendar</a>
+                <a href="#"><i class="fa-regular fa-folder-open" style="margin-right: 10px;"></i>Carpeta de Drive de la clase</a>
             </div>
             <div class="separaciones">
                 <a>Retos</a>
