--- a/Classroom.html
+++ b/Classroom.html
@@ -27,17 +27,25 @@
                 <a href="#" class="crearBoton">+ Crear</a>
                 <a href="#"><i class="fa-regular fa-comment-dots" style="margin-right: 10px;"></i>Meet</a>
                 <a href="#"><i class="fa-regular fa-calendar" style="margin-right: 10px;"></i>Google Calendar</a>
-                <a href="#"><i class="fa-regular fa-folder-open" style="margin-right: 10px;"></i>Carpeta de Drive de la clase</a>
+                <a href="#"><i class="fa-regular fa-folder-open" style="margin-right: 10px;"></i>Carpeta de Drive de la
+                    clase</a>
             </div>
             <div class="separaciones">
-                <a>Retos</a>
+                <a class="titulo">Retos</a>
                 <div class="contenido">
-                    <a>Reto 1ª Evaluación</a>
+                    <div class="subtitulo">
+                        <div class="imagen">
+                            <i class="fa-regular fa-file-powerpoint"></i>
+                        </div>
+
+                        <a>Reto 1ª Evaluación</a>
+                    </div>
+
                     <p>Fecha de entrega: 10 dic. 2022</p>
                 </div>
             </div>
             <div class="separaciones">
-                <a>Labs.</a>
+                <a class="titulo">Labs.</a>
                 <div class="contenido">
                     <a>Reto 1ª Evaluación</a>
                     <p>Fecha de entrega: 10 dic. 2022</p>
